syntax = "proto3";

import "google/protobuf/empty.proto";
package todoPackage;

service Todo {
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc readTodos(google.protobuf.Empty) returns (TodoItems);
}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}